test/scc/type/semantic-errors/009.a
009.t:3:17: error: alignment is not an integer constant